--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -11,8 +11,8 @@
       {% endif %}
 
       
-        <img src="{% static 'assets/img/mediclinic-logo.png'%}" alt="">
-           <span class="d-none d-lg-block" style="font-family: 'Roboto', sans-serif; font-weight: 700; color: #3498db;">MEDICLINIC ERP.</span>
+        <img src="{% static 'assets/img/airplane-logo.png'%}" alt="">
+           <span class="d-none d-lg-block" style="font-family: 'Roboto', sans-serif; font-weight: 700; color: #3498db;">NAIROBI JETS.</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
@@ -182,7 +182,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="{% url 'clinic_settings'%}">
+              <a class="dropdown-item d-flex align-items-center" href="#">
                 <i class="bi bi-gear"></i>
                 <span>Account Settings</span>
               </a>
@@ -192,7 +192,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="{% url 'help_support'%}">
+              <a class="dropdown-item d-flex align-items-center" href="#">
                 <i class="bi bi-question-circle"></i>
                 <span>Need Help?</span>
               </a>
