--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,7 +1,6 @@
 {% load static %}
-
 <!-- ======= Header ======= -->
-<header id="header" class="header fixed-top d-flex align-items-center">
+<header id="header" class="header fixed-top d-flex align-items-center" style="background-color: #1a76d1;">
 
     <div class="d-flex align-items-center justify-content-between">
       {% if request.user.is_staff %}
@@ -9,18 +8,16 @@
         {% else %}
         <a href="#" class="logo d-flex align-items-center">
       {% endif %}
-
-      
         <img src="{% static 'assets/img/airplane-logo.png'%}" alt="">
-           <span class="d-none d-lg-block" style="font-family: 'Roboto', sans-serif; font-weight: 700; color: #3498db;">NAIROBI JETS.</span>
+        <span class="d-none d-lg-block" style="font-family: 'Roboto', sans-serif; font-weight: 700; color: white;">NAIROBI JET HOUSE</span>
       </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
+      <i class="bi bi-list toggle-sidebar-btn" style="color: white;"></i>
     </div><!-- End Logo -->
 
     <div class="search-bar">
-      <form class="search-form d-flex align-items-center"  action="/">
-        <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
+      <form class="search-form d-flex align-items-center" action="/">
+        <input type="text" name="query" placeholder="Search" title="Enter search keyword" style="border-color: #3498db;">
+        <button type="submit" title="Search" ><i class="bi bi-search"></i></button>
       </form>
     </div><!-- End Search Bar -->
 
@@ -28,16 +25,15 @@
       <ul class="d-flex align-items-center">
 
         <li class="nav-item d-block d-lg-none">
-          <a class="nav-link nav-icon search-bar-toggle " href="#">
+          <a class="nav-link nav-icon search-bar-toggle" href="#" style="color: white;">
             <i class="bi bi-search"></i>
           </a>
         </li><!-- End Search Icon-->
 
         <li class="nav-item dropdown">
-
-          <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+          <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown" style="color: white;">
             <i class="bi bi-bell"></i>
-            <span class="badge bg-primary badge-number">4</span>
+            <span class="badge bg-white badge-number" style="color: #1a76d1;">4</span>
           </a><!-- End Notification Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
@@ -49,52 +45,36 @@
               <hr class="dropdown-divider">
             </li>
             {% for news in news_updates|slice:":3" %}
-
             <li class="notification-item">
                 {% if news.created_by == request.user %}
-                    <!-- If the news belongs to the logged-in user, do not include the message link -->
-                    
                 {% else %}
-                    <!-- Include the message link if the news does not belong to the logged-in user -->
                     <a href="#" class="text-primary">
                         <i class="bi bi-envelope"></i>
                     </a>
-                    
                 {% endif %}
-
                 <div>
                     <h4>{{ news.created_by.username }} ~ {{ news.title }}</h4>
                     <p>{{ news.description|truncatechars:100 }}</p>
                     <p>{{ news.published_date }}</p>
                 </div>
             </li>
-
             <li>
                 <hr class="dropdown-divider">
             </li>
-
             {% endfor %}
-
-              
-            </li>
-
-
             <li>
               <hr class="dropdown-divider">
             </li>
             <li class="dropdown-footer">
               <a href="#">Show all notifications</a>
             </li>
-
           </ul><!-- End Notification Dropdown Items -->
-
         </li><!-- End Notification Nav -->
 
         <li class="nav-item dropdown">
-
-          <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+          <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown" style="color: white;">
             <i class="bi bi-chat-left-text"></i>
-            <span class="badge bg-success badge-number">3</span>
+            <span class="badge bg-white badge-number" style="color: #1a76d1;">3</span>
           </a><!-- End Messages Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
@@ -130,17 +110,13 @@
             <li class="dropdown-footer">
                 <a href="#">Show all messages</a>
             </li>
-        </ul>
-        
-        
-
+          </ul>
         </li><!-- End Messages Nav -->
 
         <li class="nav-item dropdown pe-3">
-
-          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="{% static 'assets/img/profile.png'%}" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">
+          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown" style="color: white;">
+            <img src="{% static 'assets/img/profile.png'%}" alt="Profile" class="rounded-circle" style="border: 2px solid white;">
+            <span class="d-none d-md-block dropdown-toggle ps-2" style="color: white;">
               {% if user.is_authenticated %}
                   {{ user.first_name }}
               {% else %}
@@ -153,7 +129,7 @@
             <li class="dropdown-header">
               {% if user.is_authenticated %}
                 <h6>{{ user.first_name }} {{ user.last_name }}</h6>
-                <span> {{ user.username }}   </span>
+                <span>{{ user.username }}</span>
             {% else %}
                 <h6>Guest</h6>
                 <span>Welcome</span>
@@ -166,16 +142,15 @@
             <li>
               {% if request.user.is_staff %}
               <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-person"></i>
+                <i class="bi bi-person" style="color: #1a76d1;"></i>
                 <span>My Profile</span>
               </a>
               {% else %}
               <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-person"></i>
+                <i class="bi bi-person" style="color: #1a76d1;"></i>
                 <span>My Profile</span>
               </a>
             {% endif %}
-              
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -183,7 +158,7 @@
 
             <li>
               <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-gear"></i>
+                <i class="bi bi-gear" style="color: #1a76d1;"></i>
                 <span>Account Settings</span>
               </a>
             </li>
@@ -193,7 +168,7 @@
 
             <li>
               <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-question-circle"></i>
+                <i class="bi bi-question-circle" style="color: #1a76d1;"></i>
                 <span>Need Help?</span>
               </a>
             </li>
@@ -203,15 +178,12 @@
 
             <li>
               <a class="dropdown-item d-flex align-items-center" href="{% url 'logout'%}">
-                <i class="bi bi-box-arrow-right"></i>
+                <i class="bi bi-box-arrow-right" style="color: #1a76d1;"></i>
                 <span>Sign Out</span>
               </a>
             </li>
-
           </ul><!-- End Profile Dropdown Items -->
         </li><!-- End Profile Nav -->
-
       </ul>
     </nav><!-- End Icons Navigation -->
-
-  </header><!-- End Header -->
+</header><!-- End Header -->
