--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -2,7 +2,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; 2025 <strong><span>Mediclinic Management System</span></strong>. All Rights Reserved
+      &copy; 2025 <strong><span>Nairobi Jet House Systems</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
       
