made updates on admin

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -177,7 +177,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="{% url 'logout'%}">
+              <a class="dropdown-item d-flex align-items-center" href="{% url 'admin_logout'%}">
                 <i class="bi bi-box-arrow-right" style="color: #1a76d1;"></i>
                 <span>Sign Out</span>
               </a>
