--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -199,7 +199,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="{% url 'logout' %}">
+            <a class="nav-link collapsed" href="{% url 'admin_logout' %}">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Logout</span>
             </a>
