--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -25,7 +25,7 @@
             </a>
             <ul id="users-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="#">
+                    <a href="{% url 'client_list'%}">
                         <i class="bi bi-person"></i> Clients
                     </a>
                 </li>
