--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'aircraft_owner_list'%}">
                         <i class="bi bi-airplane"></i> Aircraft Owners
                     </a>
                 </li>
