--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -56,7 +56,7 @@
             </a>
             <ul id="aircraft-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="#">
+                    <a href="{% url 'aircraft_list'%}">
                         <i class="bi bi-airplane-engines"></i> All Aircraft
                     </a>
                 </li>
