--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'aircraft_types'%}">
                         <i class="bi bi-tags"></i> Aircraft Types
                     </a>
                 </li>
