--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -66,7 +66,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'availability_list'%}">
                         <i class="bi bi-calendar-check"></i> Availability
                     </a>
                 </li>
