--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -87,7 +87,7 @@
             </a>
             <ul id="bookings-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="#">
+                    <a href="{% url 'booking_list'%}">
                         <i class="bi bi-journal-text"></i> All Bookings
                     </a>
                 </li>
