--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -59,6 +59,7 @@
   <link href="{% static 'assets/css/extra.css'%}" rel="stylesheet">
   <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
   <script src="{% static 'assets/js/messages.js'%}"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <script src="https://unpkg.com/htmx.org@1.9.0"></script>
 </head>
