--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -149,7 +149,7 @@
             </a>
             <ul id="requests-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="#">
+                    <a href="{% url 'inquiry_list'%}">
                         <i class="bi bi-question-circle"></i> Flight Inquiries
                     </a>
                 </li>
