--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -154,7 +154,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'cargo_request_list'%}">
                         <i class="bi bi-box-seam"></i> Cargo Requests
                     </a>
                 </li>
