--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -159,7 +159,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'leasing_inquiry_list'%}">
                         <i class="bi bi-file-earmark-text"></i> Leasing Inquiries
                     </a>
                 </li>
