--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -163,6 +163,11 @@
                         <i class="bi bi-file-earmark-text"></i> Leasing Inquiries
                     </a>
                 </li>
+                 <li>
+                    <a href="{% url 'group_inquiry_list'%}">
+                        <i class="bi bi-file-earmark-text"></i> Group Inquiries
+                    </a>
+                </li>
                 <li>
                     <a href="#">
                         <i class="bi bi-chat-left-text"></i> Contact Submissions
