--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -169,7 +169,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'contact_submission_list'%}">
                         <i class="bi bi-chat-left-text"></i> Contact Submissions
                     </a>
                 </li>
