--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -35,12 +35,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'booking_agents_list'%}">
                         <i class="bi bi-person-badge"></i> Booking Agents
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'admin_users_list'%}">
                         <i class="bi bi-shield-lock"></i> Administrators
                     </a>
                 </li>
