--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -133,7 +133,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'financial_dashboard'%}">
                         <i class="bi bi-graph-up"></i> Financial Reports
                     </a>
                 </li>
