--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -10,7 +10,7 @@
 
         <!-- Dashboard -->
         <li class="nav-item">
-            <a class="nav-link" href="#" style="border-left: 3px solid #1a76d1;">
+            <a class="nav-link" href="{% url 'admin_dashboard'%}" style="border-left: 3px solid #1a76d1;">
                 <i class="bi bi-speedometer2" style="color: #1a76d1;"></i>
                 <span>Flight  Dashboard</span>
             </a>
