--- a/templates/404.html
+++ b/templates/404.html
@@ -66,9 +66,10 @@
                 <h2 class="mb-3">Oops! The page you're looking for doesn't exist.</h2>
                 <p class="text-muted mb-4">The requested URL was not found on our server. You may have mistyped the address or the page has been moved.</p>
                 <div class="d-flex justify-content-center gap-3">
-                    <a href="/" class="btn btn-primary">
-                        <i class="bi bi-house-door"></i> Go to Homepage
+                    <a href="javascript:history.back()" class="btn btn-primary">
+                        <i class="bi bi-house-door"></i> Go Back
                     </a>
+
                     <a href="mailto:support@nairobi.jet.house" class="btn btn-outline-primary">
                         <i class="bi bi-envelope"></i> Contact Support
                     </a>
