--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -97,7 +97,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'new_booking'%}">
                         <i class="bi bi-plus-circle"></i> New Booking
                     </a>
                 </li>
