--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -102,7 +102,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'airport_list'%}">
                         <i class="bi bi-pin-map"></i> Airports
                     </a>
                 </li>
