--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -92,7 +92,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'flightleg_list'%}">
                         <i class="bi bi-signpost-split"></i> Flight Legs
                     </a>
                 </li>
