--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -118,7 +118,7 @@
             </a>
             <ul id="finance-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="#">
+                    <a href="{% url 'pricing_rules_list'%}">
                         <i class="bi bi-currency-dollar"></i> Pricing Rules
                     </a>
                 </li>
